--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://silvineey.github.io/login-leact/",
+  "homepage": "https://silvineey.github.io/Login-React/",
   "name": "login-react",
   "private": true,
   "version": "0.0.0",
